# HPCSE-I

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
cmake-modules/: FindEigen3.cmake  FindZFP.cmake
exercise01/: CMakeLists.txt
exercise01/roofline/: main.cpp
exercise02/: CMakeLists.txt
exercise02/alock/: Makefile  main.cpp  plot.py
exercise02/associativity/: Makefile  main.cpp  plot.sh
exercise02/cache_size/: Makefile  main.cpp
exercise03/: CMakeLists.txt
exercise03/false_sharing/: main.cpp
exercise04/: CMakeLists.txt
exercise04/ispc_gemm/: Makefile  gemm.cpp  gemm.ispc  speedup_double.txt  speedup_single.txt
exercise04/vectorized_reduction/: Makefile  vectorized_reduction.cpp
exercise05/: CMakeLists.txt
exercise05/power_method/: Makefile  main.cpp  plot.py  results.txt
exercise06/: CMakeLists.txt  Makefile  linear_01_threads.txt  linear_06_threads.txt  linear_12_threads.txt  linear_24_threads.txt  linear_runtimes.txt  main_nonlinear.cpp  nonlinear_01_threads.txt  nonlinear_06_threads.txt  nonlinear_12_threads.txt  nonlinear_24_threads.txt  nonlinear_runtimes.txt
exercise06/components/linear/: component_2.raw
exercise06/components/nonlinear/: component_0.raw  component_1.raw  component_11.raw  component_5.raw
exercise06/linear/: component_0.raw  component_1.raw  component_4.raw  component_6.raw  component_7.raw  component_8.raw
exercise06/network/: Layers.h  Optimizer.h
exercise06/neural_networks/: Makefile  main_linear.cpp  main_nonlinear.cpp  visualize_components.py
exercise06/neural_networks/components/linear/: component_3.raw  component_5.raw  component_9.raw
exercise06/neural_networks/components/nonlinear/: component_14.raw  component_15.raw  component_16.raw  component_19.raw  component_2.raw
exercise06/neural_networks/mnist/: MNISTConfig.cmake
exercise06/neural_networks/network/: Layers.h  Network.h
exercise06/nonlinear/: component_10.raw  component_12.raw  component_13.raw  component_17.raw  component_18.raw  component_3.raw  component_4.raw  component_6.raw  component_7.raw  component_8.raw  component_9.raw
exercise07/: CMakeLists.txt
exercise07/convolutional_neural_networks/: Makefile  main_classify_improved.cpp  models.txt  runtimes.txt
exercise07/convolutional_neural_networks/network/: Layer_Conv2D.h  Layer_Im2Mat.h  Layer_Linear.h
exercise08/: CMakeLists.txt
exercise08/mpi_reduction/: Makefile  main.cpp
exercise09/: CMakeLists.txt
exercise09/mpi_matrix_vector/: def.h  io.h  main.cpp  runtimes.txt  scaling.py
exercise10/: CMakeLists.txt
exercise10/mpi_compression/: compression_rates.py  compression_rates.sh  compression_rates.txt  compressor.h  helper.h  mpi_float_compression.cpp
exercise11/: CMakeLists.txt
exercise11/diffusion_adi/: Makefile  diffusion2d_adi_openmp.cpp  plot.py  timer.hpp
exercise12/: CMakeLists.txt
exercise12/particle_strength_exchange/: plot.py  pse2d.cpp
utils/: CMakeLists.txt  timer.h
